Bug 495159 - Streamed timeline posts don't update the read marker
Summary: Streamed timeline posts don't update the read marker
Status: RESOLVED FIXED
Alias: None
Product: Tokodon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-21 19:51 UTC by Joshua Goins
Modified: 2024-11-27 21:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joshua Goins 2024-10-21 19:51:25 UTC
as the title says
Comment 1 Joshua Goins 2024-11-27 21:48:52 UTC
Git commit 60aeb484f2d48bda111e83ac1cc803c6b2a63909 by Joshua Goins.
Committed on 27/11/2024 at 21:32.
Pushed by redstrate into branch 'master'.

Update read marker when streaming posts come in

If you're at the top of the timeline and see posts via streaming,
the read marker didn't update properly. Now it should work as you'd
expect.

M  +7    -0    src/content/ui/Components/TimelineView.qml
M  +1    -0    src/timeline/maintimelinemodel.cpp
M  +1    -0    src/timeline/timelinemodel.h

https://invent.kde.org/network/tokodon/-/commit/60aeb484f2d48bda111e83ac1cc803c6b2a63909
Comment 2 Joshua Goins 2024-11-27 21:51:15 UTC
Git commit e3661b7d86edde911bd35dfda056ac6eea00f44b by Joshua Goins.
Committed on 27/11/2024 at 21:50.
Pushed by redstrate into branch 'release/24.12'.

Update read marker when streaming posts come in

If you're at the top of the timeline and see posts via streaming,
the read marker didn't update properly. Now it should work as you'd
expect.
(cherry picked from commit 60aeb484f2d48bda111e83ac1cc803c6b2a63909)

M  +7    -0    src/content/ui/Components/TimelineView.qml
M  +1    -0    src/timeline/maintimelinemodel.cpp
M  +1    -0    src/timeline/timelinemodel.h

https://invent.kde.org/network/tokodon/-/commit/e3661b7d86edde911bd35dfda056ac6eea00f44b