Update read marker when streaming posts come in

If you're at the top of the timeline and see posts via streaming,
the read marker didn't update properly. Now it should work as you'd
expect.

BUG: 495159